# atlas-research

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: static.yaml  static.yml
notebooks/: btc.ipynb  btc.py
viz/: btc_dashboard.html  index.html
