[project]
name = "atlas-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alpaca-py>=0.40.1",
    "altair>=5.5.0",
    "graphviz>=0.20.3",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "polars>=1.29.0",
    "pyarrow>=20.0.0",
    "pydot>=4.0.0",
    "setuptools>=80.7.1",
    "vega-datasets>=0.9.0",
    "vegafusion>=2.0.2",
    "vl-convert-python>=1.7.0",
]
